syntax = "proto3";
package etl_grpc.transformers.transform;
import "etl_grpc/basetypes/ds_error.proto";

message TransformPayload {
  optional string string_content = 1;
  optional bytes bytes_content = 2;
  optional string json_string_content = 3;
}

message TransformResponse {
  TransformPayload result = 1;
  optional basetypes.ds_error.GrpcDataStoreError error = 2;
}

service Transformer {
  rpc Transform(TransformPayload) returns (TransformResponse) {}
  rpc TransformStream(stream TransformPayload) returns (stream TransformResponse) {}
}
